added graph pdf

--- a/titanic.ipynb
+++ b/titanic.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
+    "%matplotlib inline\n",
     "import pandas as pd\n",
     "from sklearn.tree import DecisionTreeClassifier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        male\n",
+       "1      female\n",
+       "2      female\n",
+       "3      female\n",
+       "4        male\n",
+       "        ...  \n",
+       "885    female\n",
+       "886      male\n",
+       "887    female\n",
+       "889      male\n",
+       "890      male\n",
+       "Name: Sex, Length: 714, dtype: object"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Sex']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,22 +81,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DecisionTreeClassifier(ccp_alpha=0.0, class_weight=None, criterion='gini',\n",
+       "                       max_depth=None, max_features=None, max_leaf_nodes=None,\n",
+       "                       min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "                       min_samples_leaf=1, min_samples_split=2,\n",
+       "                       min_weight_fraction_leaf=0.0, presort='deprecated',\n",
+       "                       random_state=300, splitter='best')"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "clf = DecisionTreeClassifier(random_state=241)\n",
+    "clf = DecisionTreeClassifier(random_state=300)\n",
     "\n",
     "x = df[x_columns].values\n",
     "y = df[y_columns].values\n",
     "\n",
-    "clf.fit(x, y)\n",
-    "importances = clf.feature_importances_"
+    "clf.fit(x, y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +132,7 @@
        "['Sex', 'Fare']"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,6 +140,46 @@
    "source": [
     "[name for _, name in sorted(importances)[-2:]]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import graphviz "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'titanoc.pdf'"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dot_data = tree.export_graphviz(clf, out_file=None,  \n",
+    "                     filled=True, rounded=True,  \n",
+    "                     special_characters=True)  \n",
+    "graph = graphviz.Source(dot_data)  \n",
+    "graph.render('titanoc')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
